--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 GeometricalPredicates = "fd0ad045-b25c-564e-8f9c-8ef5c5f21267"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 
 [compat]
 julia = "1.3"
