--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GeometricalPredicates = "fd0ad045-b25c-564e-8f9c-8ef5c5f21267"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
