--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
         version:
           - '1.7.2'
           - '1'
-          - 'nightly'
+#          - 'nightly'
         os:
           - ubuntu-latest
         arch:
