--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,8 +16,8 @@ jobs:
       matrix:
         version:
           - '1.7.2'
-          - '1'
-#          - 'nightly'
+          - '1.3'
+          - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
