--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
+LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 NBInclude = "0db19996-df87-5ea3-a455-e3a50d440464"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
